--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "has-own",
   "version": "1.0.0",
-  "description": "Has own property shorthand: hasOwn(name, obj)",
+  "description": "A safer .hasOwnProperty() - hasOwn(name, obj)",
   "main": "index.js",
   "scripts": {
     "test": "make test"
